--- a/polybar.conf
+++ b/polybar.conf
@@ -66,7 +66,7 @@ font-0 = Hack:fontformat=truetype:size=16;3
 font-1 = FontAwesome:fontformat=truetype:size=16;3
 ;font-2 = Unifont Upper
 
-modules-left = i3 xwindow
+modules-left = i3
 modules-center = mem cpu
 modules-right = volume lan wifi
 
