Show wifi icon when not connected

--- a/polybar.conf
+++ b/polybar.conf
@@ -221,7 +221,7 @@ label-connected-foreground = #0F0
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
 ; Default: (none)
-label-disconnected = not connected
+label-disconnected =  not connected
 label-disconnected-foreground = #66ffffff
 
 ; Only applies if <ramp-signal> is used
