Switch tray and date

--- a/polybar.conf
+++ b/polybar.conf
@@ -33,9 +33,17 @@ bottom = false
 
 modules-left = xwindow
 modules-center =
-modules-right = battery date
+modules-right = battery
 
-tray-position =
+tray-position = right
+tray-padding = 9
+tray-transparent = false
+tray-offset-y = 0%
+tray-offset-x = 0%
+tray-maxsize = 18
+tray-detached = false
+tray-background = ${colors.my_background}
+
 
 [bar/standard]
 monitor = ${env:MONITOR:eDP1}
@@ -68,18 +76,9 @@ font-1 = FontAwesome:fontformat=truetype:size=16;3
 
 modules-left = i3
 modules-center = mem cpu
-modules-right = volume lan wifi
+modules-right = volume lan wifi date
 
-tray-position = right
-tray-padding = 9
-tray-transparent = false
-tray-offset-y = 0%
-tray-offset-x = 0%
-tray-maxsize = 18
-tray-detached = false
-tray-background = ${colors.my_background}
-
-
+tray-position =
 
 
 [module/i3]
