--- a/polybar.conf
+++ b/polybar.conf
@@ -4,7 +4,7 @@
 ;       Andreas Schmid <ikeark@gmail.com         ;
 ;                                                ;
 ;-------------------------------------------------
-
+;vim set filetype=dosini
 
 [colors]
 ;My colors are set from .Xresources to match everything else
@@ -75,7 +75,7 @@ font-1 = FontAwesome:fontformat=truetype:size=16;3
 ;font-2 = Unifont Upper
 
 modules-left = i3
-modules-center = mem cpu
+modules-center = filesystem mem cpu
 modules-right = volume lan wifi date
 
 tray-position =
@@ -350,3 +350,24 @@ ramp-volume-2 = 
 ; Only applies if <ramp-volume> is used
 ramp-headphones-0 = 
 ramp-headphones-1 = 
+
+
+[module/filesystem]
+type = internal/fs
+
+; Mountpoints to display
+mount-0 = /
+
+; Seconds to sleep between updates
+; Default: 30
+interval = 10
+
+; Display fixed precision values
+; Default: false
+fixed-values = true
+
+; Spacing between entries
+; Default: 2
+spacing = 4
+
+label-mounted =  %free%
