Make i3 workspaces look smaller, correctly display renamed workspaces

--- a/polybar.conf
+++ b/polybar.conf
@@ -90,27 +90,27 @@ label-unfocused-foreground = ${colors.my_foreground}
 
 
 label-mode = %mode%
-label-mode-padding = 2
+label-mode-padding = 1
 label-mode-background = ${colors.my_color7}
 
-label-focused = %index%
+label-focused = %icon%%name%
 label-focused-foreground = ${colors.my_foreground}
 label-focused-background = ${colors.my_background}
 label-focused-underline = ${colors.my_color7}
-label-focused-padding = 2
+label-focused-padding = 1
 
-label-unfocused = %index%
-label-unfocused-padding = 2
+label-unfocused = %icon%%name%
+label-unfocused-padding = 1
 
-label-visible = %index%
+label-visible = %icon%%name%
 label-visible-underline = ${colors.my_foreground}
-label-visible-padding = 4
+label-visible-padding = 1
 
 label-urgent = %index%
 label-urgent-foreground = ${colors.my_foreground}
 label-urgent-background = ${colors.my_background}
 label-urgent-underline = ${colors.my_color7}
-label-urgent-padding = 2
+label-urgent-padding = 1
 
 
 [module/date]
