Define colors in polybar.conf instead of xresources

--- a/polybar.conf
+++ b/polybar.conf
@@ -7,25 +7,25 @@
 ;vim set filetype=dosini
 
 [colors]
-;My colors are set from .Xresources to match everything else
-my_background   = ${xrdb:background}
-my_foreground   = ${xrdb:foreground}
-my_color0 = ${xrdb:color0}
-my_color1 = ${xrdb:color1}
-my_color2 = ${xrdb:color2}
-my_color3 = ${xrdb:color3}
-my_color4 = ${xrdb:color4}
-my_color5 = ${xrdb:color5}
-my_color6 = ${xrdb:color6}
-my_color7 = ${xrdb:color7}
-my_color8 = ${xrdb:color8}
-my_color9 = ${xrdb:color9}
-my_color10  = ${xrdb:color10}
-my_color11  = ${xrdb:color11}
-my_color12  = ${xrdb:color12}
-my_color13  = ${xrdb:color13}
-my_color14  = ${xrdb:color14}
-my_color15  = ${xrdb:color15}
+my_background   = #1D1F21
+my_foreground   = #C5C8C6
+
+my_color0 = #282A2E
+my_color1 = #A54242
+my_color2 = #8C9440
+my_color3 = #DE935F
+my_color4 = #5F819D
+my_color5 = #85678F
+my_color6 = #5E8D87
+my_color7 = #707880
+my_color8 = #373B41
+my_color9 = #CC6666
+my_color10  = #707880
+my_color11  = #F0C674
+my_color12  = #81A2BE
+my_color13  = #B294BB
+my_color14  = #8ABEB7
+my_color15  = #C5C8C6
 
 [bar/top]
 inherit = bar/standard
