Annotate polybar.conf to enable syntax highlight

--- a/polybar.conf
+++ b/polybar.conf
@@ -1,10 +1,11 @@
+; vim: filetype=dosini
+
 ;-------------------------------------------------
 ;                                                ;
 ;     Polybar configuration                      ;
 ;       Andreas Schmid <ikeark@gmail.com         ;
 ;                                                ;
 ;-------------------------------------------------
-;vim set filetype=dosini
 
 [colors]
 my_background   = #1D1F21
