[WIP]: Fix alignment and coloring of i3 workspaces

--- a/polybar.conf
+++ b/polybar.conf
@@ -116,16 +116,17 @@ label-mode-padding = 1
 label-mode-background = ${colors.my_color7}
 
 label-focused = %icon%%name%
-label-focused-foreground = ${colors.my_foreground}
-label-focused-background = ${colors.my_background}
-label-focused-underline = ${colors.my_color7}
+label-focused-foreground = #000000
+label-focused-background = #00ff00
+label-focused-underline = #ff0000
 label-focused-padding = 1
 
 label-unfocused = %icon%%name%
 label-unfocused-padding = 1
 
+# visible somewhere on screen
 label-visible = %icon%%name%
-label-visible-underline = ${colors.my_foreground}
+label-visible-underline = #ffff00
 label-visible-padding = 1
 
 label-urgent = %index%
