Add keyboard layout to to polybar

--- a/polybar.conf
+++ b/polybar.conf
@@ -8,7 +8,6 @@
 ;-------------------------------------------------
 
 [colors]
-<<<<<<< HEAD
 my_background   = #1D1F21
 my_foreground   = #C5C8C6
 
@@ -27,26 +26,6 @@ my_color11  = #F0C674
 my_color12  = #81A2BE
 my_color13  = #B294BB
 my_color14  = #8ABEB7
-=======
-;My colors are set from .Xresources to match everything else
-my_background = #1D1F21
-my_foreground = #C5C8C6
-my_color0 = #282A2E
-my_color1 = #373B41
-my_color2 = #A54242
-my_color3 = #CC6666
-my_color4 = #8C9440
-my_color5 = #707880
-my_color6 = #DE935F
-my_color7 = #F0C674
-my_color8 = #5F819D
-my_color9 = #81A2BE
-my_color10  = #85678F
-my_color11  = #B294BB
-my_color12  = #5E8D87
-my_color13  = #8ABEB7
-my_color14  = #707880
->>>>>>> 9a6de45... Special configuration
 my_color15  = #C5C8C6
 
 [bar/top]
@@ -55,7 +34,7 @@ bottom = false
 
 modules-left = xwindow
 modules-center =
-modules-right = battery
+modules-right = keyboard battery
 
 tray-position = right
 tray-padding = 9
@@ -308,6 +287,34 @@ bar-used-foreground-3 = #ff5555
 bar-used-fill = ▐
 bar-used-empty = ▐
 bar-used-empty-foreground = #444444
+
+
+[module/keyboard]
+type = internal/xkeyboard
+
+; List of indicators to ignore
+blacklist-0 = num lock
+blacklist-1 = scroll lock
+
+; Available tags:
+;   <label-layout> (default)
+;   <label-indicator> (default)
+format = <label-layout> <label-indicator>
+format-spacing = 0
+
+; Available tokens:
+;   %layout%
+;   %name%
+;   %number%
+; Default: %layout%
+label-layout = %layout%
+label-layout-padding = 2
+
+; Available tokens:
+;   %name%
+; Default: %name%
+label-indicator = %name%
+label-indicator-padding = 2
 
 
 [module/volume]
