--- a/config
+++ b/config
@@ -157,7 +157,7 @@ bindsym $mod+Ctrl+Left  move workspace to output left
 bindsym $mod+Ctrl+Right  move workspace to output right
 
 # Lock
-bindsym $mod+b exec i3lock -c 15dc00 --dpms
+bindsym $mod+b exec i3lock -c 000000 --dpms
 
 # Configure monitors
 bindsym $mod+F1 exec --no-startup-id "~/.i3/monitor.d/single"
@@ -168,7 +168,7 @@ bindsym $mod+F3 exec --no-startup-id "~/.i3/monitor.d/work"
 exec --no-startup-id feh --randomize --bg-fill ~/.i3/backgrounds/*
 
 # Take screenshot
-bindsym --release $mod+x exec --no-startup-id import /tmp/latest-screenshot.png
+bindsym $mod+x exec --no-startup-id flameshot gui
 
 # press mod+<num> again for returning to last workspace
 workspace_auto_back_and_forth yes
